fix: body horizontal scroll

--- a/src/global.css
+++ b/src/global.css
@@ -19,5 +19,4 @@
 body {
   font-family: "HelveticaNeueLTArabic", Georgia, serif !important;
   font-weight: 500;
-  direction: rtl;
 }
